[package]
name = "ahk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
# nvapi = "0.1.4"
# nvapi-sys = "0.1"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
windows = { version = "0.51.1", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
